--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,11 @@ Change Log
 
 ================
 
-0.0.1 (26/01/2021)
+0.1.1 (27/01/2021)
+------------------------
+- Updated Readme and plot styles
+
+
+0.1.0 (27/01/2021)
 ------------------------
 - First Release
