--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,11 @@ Change Log
 
 ================
 
+0.1.3 (15/06/2021)
+------------------------
+- Add new parameter:'change_decile' in decile_table to change number of partitions.
+  Updated bug in calling kds.metrics.report.
+
 0.1.1 (27/01/2021)
 ------------------------
 - Updated Readme and plot styles
